--- a/backend_project2/pom.xml
+++ b/backend_project2/pom.xml
@@ -215,6 +215,11 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.191</version>
 		</dependency>
+		<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.1</version>
+		</dependency>
 		    
   </dependencies>
   <build>
